fixed cursor & jumping of no button to be more random

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,13 +2,14 @@ body {
   margin: 0;
   display: flex;
   align-items: center;
+  overflow: hidden;
 }
 
 #question-container {
   position: absolute;
   left: 50%;
   top: 50%;
-  width: 100%;
+  width: fit-content;
   transform: translate(-50%, -50%);
   text-align: center;
   transition: opacity 1s ease-out;
@@ -29,7 +30,7 @@ button {
 }
 
 #yes-button {
-  cursor: url('../assets/cursor.jpeg'),auto;
+  cursor: url('../assets/happy-cursor.jpeg'),auto;
 }
 
 #no-container {
